src/objects/peer__Portfolio_Weights_Table__c.object
<CustomObject>
    <fields>
        <fullName>peer__Credit_Rating_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Rating Matrix</label>
        <referenceTo>peer__Credit_Rating_Matrix__c</referenceTo>
        <relationshipLabel>Portfolio Weights Table</relationshipLabel>
        <relationshipName>Portfolio_Weights_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Insurance_Rate__c</fullName>
        <formula>peer__Credit_Rating_Matrix__r.peer__Insurance_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Rating_Name__c</fullName>
        <formula>peer__Credit_Rating_Matrix__r.peer__Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weight</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Portfolio Weights Table</label>
    <listViews>
        <fullName>peer__All</fullName>
        <columns>peer__Rating_Name__c</columns>
        <columns>peer__Weight__c</columns>
        <columns>peer__Insurance_Rate__c</columns>
        <columns>peer__Credit_Rating_Matrix__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Portfolio Weights Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Weights Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>